tests/idris2/reg034/expected
1/1: Building void (void.idr)
Error: While processing left hand side of Calc. Can't match on ?y [no locals in scope] (Non linear pattern variable).

void.idr:18:19--18:20
    |
 18 | Calc {y} ((~~) {z=y} {y=y} der (MkDPair y Refl)) = Calc der
    |                   ^

